--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,73 +7,52 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
 
     <TextView
-        android:id="@+id/titleSignUp"
+        android:id="@+id/titleLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/cardSignUp"
+        android:layout_above="@id/cardLogin"
         android:layout_marginBottom="27dp"
-        android:text="Sign Up"
-        android:layout_marginStart="110dp"
+        android:text="Login"
+        android:layout_marginStart="130dp"
         android:textColor="@color/white"
         android:textSize="40dp" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardSignUp"
+        android:id="@+id/cardLogin"
         android:layout_width="350dp"
         android:layout_height="300dp"
         android:layout_marginBottom="90dp"
         app:cardBackgroundColor="#6537A5"
         app:cardCornerRadius="20dp">
 
-        <EditText
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="20dp"
-            android:hint="Username"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textColorHint="@color/white"
-            android:textSize="24dp" />
+
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="30dp"
             android:layout_marginEnd="20dp"
             android:hint="Email"
+
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textColorHint="@color/white"
             android:textSize="24dp" />
 
-        <EditText
-            android:id="@+id/phone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="20dp"
-            android:hint="Phone"
-            android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textColorHint="@color/white"
-            android:textSize="24dp" />
+
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="100dp"
             android:layout_marginEnd="20dp"
             android:hint="Password"
             android:textAlignment="center"
@@ -84,7 +63,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign UP"
+            android:text="Login"
             android:textColor="@color/white"
             android:layout_marginStart="130dp"
             android:layout_marginTop="220dp"
@@ -97,7 +76,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
-        android:text="Already registered?"
+        android:text="Not registered yet?"
         android:textColor="@color/white"
         android:layout_marginTop="350dp"
         >
@@ -105,10 +84,10 @@
     </TextView>
 
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Sign Up"
         android:layout_marginStart="200dp"
         android:layout_marginTop="340dp"/>
 
