--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,13 +81,27 @@
             android:textColorHint="@color/white"
             android:textSize="24dp" />
 
+        <EditText
+            android:id="@+id/confirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="180dp"
+            android:layout_marginEnd="20dp"
+            android:hint="Confirm Password"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textColorHint="@color/white"
+            android:textSize="24dp" />
+
         <Button
+            android:id="@+id/signUpBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign UP"
             android:textColor="@color/white"
             android:layout_marginStart="130dp"
-            android:layout_marginTop="220dp"
+            android:layout_marginTop="240dp"
             />
 
     </androidx.cardview.widget.CardView>
@@ -111,6 +125,15 @@
         android:text="Login"
         android:layout_marginStart="200dp"
         android:layout_marginTop="340dp"/>
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="390dp"
+        android:layout_marginStart="160dp"
+        />
+
 
 
 
