--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,7 +14,7 @@
         android:layout_width="300dp"
         android:layout_height="350dp"
         android:src="@drawable/splash"
-        />
+        android:contentDescription="@string/todo" />
     <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
